# MailaDB

./: .gitignore  CMakeLists.txt  Makefile  README.md
Obsidian Vault/: TO DO.md
Obsidian Vault/.obsidian/: workspace.json
Obsidian Vault/C/: OOP.md  README.md
Obsidian Vault/C/files/: Read and Write.md
Obsidian Vault/databases/: Bash Database.md
Obsidian Vault/optimizations/: Binary Encoding.md
bash/: bdb  database
c/: Makefile  compile
c/Obsidian Vault/.obsidian/: workspace.json
c/data/: out.db  output.txt
c/src/: main.c  utils.c
data/: out.db
src/: cli.c  controller.c  controller.h  hash_map.c  hash_map.h  hashmap.c  hashmap.h  main.c  socket.c  socket.h  storage.c  storage.h  utils.h
